--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -1,9 +1,12 @@
 {
+    "bindOption": "IP для прослушивания",
+    "cmiIP": "IP -адрес C.M.I.",
+    "cmiPort": "Порт Коу С.М.И.",
     "cmicoe adapter settings": "Настройки адаптера для cmicoe",
+    "nodesOption": "Выходные узлы ([Узел]/[d | a] [Выход], ..), например: 25/d1,29/a3",
     "option1": "вариант1",
     "option2": "вариант2",
-    "cmiIP": "IP -адрес C.M.I.",
-    "nodesOption": "Выходные узлы ([Узел]/[d | a] [Выход], ..), например: 25/d1,29/a3",
+    "portOption": "порт, чтобы слушать",
     "sendInterval": "Отправить интервал",
     "sendOnChange": "отправить на перемены"
 }
