--- a/admin/i18n/fr/translations.json
+++ b/admin/i18n/fr/translations.json
@@ -1,9 +1,12 @@
 {
+    "bindOption": "IP pour écouter",
+    "cmiIP": "Adresse IP du C.M.I.",
+    "cmiPort": "Coe Port du C.M.I.",
     "cmicoe adapter settings": "Paramètres d'adaptateur pour cmicoe",
+    "nodesOption": "Nœuds de sortie ([nœud] / [d | a] [sortie], ..) par exemple: 25 / d1,29 / a3",
     "option1": "option1",
     "option2": "Option2",
-    "cmiIP": "Adresse IP du C.M.I.",
-    "nodesOption": "Nœuds de sortie ([nœud] / [d | a] [sortie], ..) par exemple: 25 / d1,29 / a3",
+    "portOption": "port à écouter",
     "sendInterval": "envoyer un intervalle",
     "sendOnChange": "envoyer des changements"
 }
