--- a/admin/i18n/it/translations.json
+++ b/admin/i18n/it/translations.json
@@ -1,9 +1,12 @@
 {
+    "bindOption": "IP da ascoltare da",
+    "cmiIP": "Indirizzo IP del C.M.I.",
+    "cmiPort": "COE Port of the C.M.I.",
     "cmicoe adapter settings": "Impostazioni dell'adattatore per cmicoe",
+    "nodesOption": "nodi di output ([nodo]/[d | a] [output], ..) ad esempio: 25/d1,29/a3",
     "option1": "opzione1",
     "option2": "opzione2",
-    "cmiIP": "Indirizzo IP del C.M.I.",
-    "nodesOption": "nodi di output ([nodo]/[d | a] [output], ..) ad esempio: 25/d1,29/a3",
+    "portOption": "porto da ascoltare da",
     "sendInterval": "Invia intervallo",
     "sendOnChange": "Invia il cambiamento"
 }
