--- a/admin/i18n/zh-cn/translations.json
+++ b/admin/i18n/zh-cn/translations.json
@@ -1,9 +1,12 @@
 {
+    "bindOption": "IP从",
+    "cmiIP": "C.M.I.的IP地址",
+    "cmiPort": "C.M.I.的COE港口",
     "cmicoe adapter settings": "cmicoe的适配器设置",
+    "nodesOption": "输出节点（[node]/[d | a] [output]，..）例如：25/d1,29/a3",
     "option1": "选项1",
     "option2": "选项2",
-    "cmiIP": "C.M.I.的IP地址",
-    "nodesOption": "输出节点（[node]/[d | a] [output]，..）例如：25/d1,29/a3",
+    "portOption": "从",
     "sendInterval": "发送间隔",
     "sendOnChange": "发送更改"
 }
