--- a/admin/i18n/pl/translations.json
+++ b/admin/i18n/pl/translations.json
@@ -4,9 +4,13 @@
     "cmiPort": "Port Coe of C.M.I.",
     "cmicoe adapter settings": "Ustawienia adaptera dla cmicoe",
     "nodesOption": "Węzły wyjściowe ([węzeł]/[d | a] [wyjście], ..) np.: 25/d1,29/a3",
-    "option1": "opcja 1",
-    "option2": "opcja2",
     "portOption": "port do słuchania",
     "sendInterval": "Wyślij interwał",
-    "sendOnChange": "Wyślij zmianę"
+    "sendOnChange": "Wyślij zmianę",
+    "nodeId": "Identyfikator węzła",
+    "outType": "Typ wyjściowy",
+    "outId": "Identyfikator wyjściowy",
+    "description": "Opis",
+    "unit": "Jednostka",
+    "output": "Ausgang"
 }
