--- a/admin/i18n/pt/translations.json
+++ b/admin/i18n/pt/translations.json
@@ -4,9 +4,13 @@
     "cmiPort": "Porta Coe do C.M.I.",
     "cmicoe adapter settings": "Configurações do adaptador para cmicoe",
     "nodesOption": "nós de saída ([nó]/[d | a] [saída], ..) por exemplo: 25/d1,29/a3",
-    "option1": "opção1",
-    "option2": "opção2",
     "portOption": "porta para ouvir",
     "sendInterval": "Enviar intervalo",
-    "sendOnChange": "Envie em alteração"
+    "sendOnChange": "Envie em alteração",
+    "nodeId": "ID do nó",
+    "outType": "Tipo de saída",
+    "outId": "ID de saída",
+    "description": "Descrição",
+    "unit": "Unidade",
+    "output": "Ausgang"
 }
