--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -1,12 +1,16 @@
 {
-    "bindOption": "IP zum Anhören von",
+    "bindOption": "Lokale IP",
     "cmiIP": "IP-Adresse des C.M.I.",
     "cmiPort": "CoE-Port des C.M.I.",
     "cmicoe adapter settings": "Adaptereinstellungen für cmicoe",
     "nodesOption": "Ausgangsknoten ([Knoten]/[d|a][Ausgang],..) e.g.: 25/d1,29/a3",
-    "option1": "",
-    "option2": "",
-    "portOption": "Port zu hören, von",
+    "portOption": "Lokaler Port",
     "sendInterval": "Sende-Intervall",
-    "sendOnChange": "Bei Änderung senden"
+    "sendOnChange": "Bei Änderung senden",
+    "nodeId": "Knoten-ID",
+    "outType": "Ausgangstyp",
+    "outId": "Ausgabe-ID",
+    "description": "Beschreibung",
+    "unit": "Einheit",
+    "output": "Ausgang"
 }
