--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -4,9 +4,13 @@
     "cmiPort": "Порт Коу С.М.И.",
     "cmicoe adapter settings": "Настройки адаптера для cmicoe",
     "nodesOption": "Выходные узлы ([Узел]/[d | a] [Выход], ..), например: 25/d1,29/a3",
-    "option1": "вариант1",
-    "option2": "вариант2",
     "portOption": "порт, чтобы слушать",
     "sendInterval": "Отправить интервал",
-    "sendOnChange": "отправить на перемены"
+    "sendOnChange": "отправить на перемены",
+    "nodeId": "Идентификатор узла",
+    "outType": "Вывод типа",
+    "outId": "Выходной идентификатор",
+    "description": "Описание",
+    "unit": "Единица",
+    "output": "Аусганг"
 }
