--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -12,5 +12,9 @@
     "outId": "Ausgabe-ID",
     "description": "Beschreibung",
     "unit": "Einheit",
-    "output": "Ausgang"
+    "output": "Ausgang",
+    "outputs": "Ausgänge",
+    "inputs": "Eingänge",
+    "deg": "°C",
+    "wm": "W/m²"
 }
