--- a/admin/i18n/it/translations.json
+++ b/admin/i18n/it/translations.json
@@ -12,5 +12,9 @@
     "outId": "ID output",
     "description": "Descrizione",
     "unit": "Unità",
-    "output": "Ausgang"
+    "output": "Ausgang",
+    "outputs": "Output",
+    "inputs": "Input",
+    "deg": "° C.",
+    "wm": "W/m²"
 }
