--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -12,5 +12,9 @@
     "outId": "Выходной идентификатор",
     "description": "Описание",
     "unit": "Единица",
-    "output": "Аусганг"
+    "output": "Аусганг",
+    "outputs": "Выходы",
+    "inputs": "Входные данные",
+    "deg": "° C.",
+    "wm": "W/м²"
 }
