--- a/admin/i18n/uk/translations.json
+++ b/admin/i18n/uk/translations.json
@@ -12,5 +12,9 @@
     "outId": "Ідентифікатор виводу",
     "description": "Опис",
     "unit": "Одиниця",
-    "output": "Аусганг"
+    "output": "Аусганг",
+    "outputs": "Виходи",
+    "inputs": "Вхід",
+    "deg": "° C",
+    "wm": "З/м²"
 }
