--- a/admin/i18n/it/translations.json
+++ b/admin/i18n/it/translations.json
@@ -16,5 +16,7 @@
     "outputs": "Output",
     "inputs": "Input",
     "deg": "° C.",
-    "wm": "W/m²"
+    "wm": "W/m²",
+    "factor": "Fattore",
+    "node": "Nodo"
 }
