--- a/admin/i18n/pl/translations.json
+++ b/admin/i18n/pl/translations.json
@@ -16,5 +16,7 @@
     "outputs": "Wyjścia",
     "inputs": "Wejścia",
     "deg": "° C.",
-    "wm": "W/m²"
+    "wm": "W/m²",
+    "factor": "Czynnik",
+    "node": "Węzeł"
 }
