--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -16,5 +16,7 @@
     "outputs": "Выходы",
     "inputs": "Входные данные",
     "deg": "° C.",
-    "wm": "W/м²"
+    "wm": "W/м²",
+    "factor": "Фактор",
+    "node": "Узел"
 }
