--- a/admin/i18n/uk/translations.json
+++ b/admin/i18n/uk/translations.json
@@ -16,5 +16,7 @@
     "outputs": "Виходи",
     "inputs": "Вхід",
     "deg": "° C",
-    "wm": "З/м²"
+    "wm": "З/м²",
+    "factor": "Фактор",
+    "node": "Вузол"
 }
