--- a/admin/i18n/nl/translations.json
+++ b/admin/i18n/nl/translations.json
@@ -16,5 +16,7 @@
     "outputs": "Uitgangen",
     "inputs": "Invoer",
     "deg": "° C",
-    "wm": "W/m²"
+    "wm": "W/m²",
+    "factor": "Factor",
+    "node": "Knooppunt"
 }
